--- a/proj.win32/InitKnight.vcxproj
+++ b/proj.win32/InitKnight.vcxproj
@@ -151,12 +151,14 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\hero.cpp" />
     <ClCompile Include="..\Classes\localPlayScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\hero.h" />
     <ClInclude Include="..\Classes\localPlayScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
