--- a/proj.win32/InitKnight.vcxproj.filters
+++ b/proj.win32/InitKnight.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\Classes\localPlayScene.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\hero.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -36,6 +39,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\localPlayScene.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\hero.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
