加入得分，加入游戏结束的两个场景

--- a/proj.win32/InitKnight.vcxproj.filters
+++ b/proj.win32/InitKnight.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="..\Classes\LocalPlayStatusLayer.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\loseScene.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\winScene.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -60,6 +66,12 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\localPlayStatusLayer.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\loseScene.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\winScene.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
