--- a/proj.win32/InitKnight.vcxproj
+++ b/proj.win32/InitKnight.vcxproj
@@ -156,6 +156,8 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\localPlayMainLayer.cpp" />
     <ClCompile Include="..\Classes\localPlayScene.cpp" />
     <ClCompile Include="..\Classes\LocalPlayStatusLayer.cpp" />
+    <ClCompile Include="..\Classes\loseScene.cpp" />
+    <ClCompile Include="..\Classes\winScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -166,6 +168,8 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\localPlayMainLayer.h" />
     <ClInclude Include="..\Classes\localPlayScene.h" />
     <ClInclude Include="..\Classes\localPlayStatusLayer.h" />
+    <ClInclude Include="..\Classes\loseScene.h" />
+    <ClInclude Include="..\Classes\winScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
